tests/neg/parsing-missing-comma.stk
fun foo(x: Int y: Int) = x + y  // error

fun bar =
  var x = 4
  x = 7                         // error

fun test(x: Int) = x * x

fun double(x = x * x           // error

fun test =
  foo x with a, b = e x = 8    // error

fun qux(x) { x * x }          // error
